# swimlane-chart-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  swimlane_chart.py
.claude/agents/: chart-layout-reviewer.md  process-analyst.md  process-consultant.md
.claude/skills/chart-generator/: SKILL.md
.claude/skills/chart-generator/references/: miro_api_constraints.md
.claude/skills/chart-planner/: SKILL.md
.claude/skills/chart-planner/assets/: chart_plan_schema.json  validation_report_schema.json
.claude/skills/chart-planner/references/: color_palette.md  layout_heuristics.md  node_kind_guide.md
.claude/skills/process-analyzer/: SKILL.md
.claude/skills/process-analyzer/references/: process_analysis_checklist.md  question_patterns.md
.claude/skills/requirements-reviewer/: SKILL.md
.claude/skills/requirements-reviewer/references/: common_gaps.md  review_criteria.md
.claude/skills/swimlane-pipeline/: SKILL.md
.claude/skills/swimlane-pipeline/references/: pipeline_workflow.md
docs/: design.md  miro-chart-architecture.md  pipeline-design.md  setup-guide.md  swimlane-pipeline-design.md
examples/: monthly_report_flow.json
scripts/: cleanup_chart.py  generate_chart.py  swimlane_chart_demo.py  validate_chart.py
src/: chart_plan_loader.py  swimlane_lib.py
tests/: conftest.py  test_chart_plan_loader.py  test_chart_plan_schema.py  test_cleanup_chart.py  test_generate_chart.py  test_swimlane_chart.py  test_swimlane_lib.py  test_validate_chart.py
